--- a/index.html
+++ b/index.html
@@ -111,51 +111,14 @@
 
 <!--gallery-->
 <div class="hero__gallery">
-    <div class="hero__gallery--track">
-        <figure class="hero__gallery--img" style="background: url('img/gallery1.jpeg');
-                            background-repeat: no-repeat;
-                            background-position: center center;
-                            background-size: cover;">
-        </figure>
-        <figure class="hero__gallery--img" style="background: url('img/gallery2.jpg');
-                            background-repeat: no-repeat;
-                            background-position: center center;
-                            background-size: cover;">
-        </figure>
-        <figure class="hero__gallery--img" style="background: url('img/gallery3.jpeg');
-                            background-repeat: no-repeat;
-                            background-position: center center;
-                            background-size: cover;">
-        </figure>
-        <figure class="hero__gallery--img" style="background: url('img/gallery4.jpeg');
-                            background-repeat: no-repeat;
-                            background-position: center center;
-                            background-size: cover;">
-        </figure>
-        <figure class="hero__gallery--img" style="background: url('img/gallery5.jpg');
-                            background-repeat: no-repeat;
-                            background-position: center center;
-                            background-size: cover;">
-        </figure>
-        <figure class="hero__gallery--img" style="background: url('img/gallery6.jpeg');
-                            background-repeat: no-repeat;
-                            background-position: center center;
-                            background-size: cover;">
-        </figure>
-        <figure class="hero__gallery--img" style="background: url('img/gallery7.jpeg');
-                            background-repeat: no-repeat;
-                            background-position: center center;
-                            background-size: cover;">
-        </figure>
-    </div>
-
-    <div class="container">
-        <button class="hero__gallery--prev--btn" id="prev">
-            <
-        </button>
-        <button class="hero__gallery--next--btn" id="next">
-            >
-        </button>
+    <div class="owl-carousel owl-theme">
+        <div class="item"><img src="img/gallery1.jpg" alt="img1" /></div>
+        <div class="item"><img src="img/gallery2.jpg" alt="img2" /></div>
+        <div class="item"><img src="img/gallery3.jpg" alt="img3" /></div>
+        <div class="item"><img src="img/gallery4.jpg" alt="img4" /></div>
+        <div class="item"><img src="img/gallery5.jpg" alt="img5" /></div>
+        <div class="item"><img src="img/gallery6.jpg" alt="img6" /></div>
+        <div class="item"><img src="img/gallery7.jpg" alt="img7" /></div>
     </div>
 </div>
 <!--./gallery-->
@@ -544,30 +507,27 @@
             <!--footer--location-->
             <div class="footer--location footer__section">
                 <h3>База отдыха Черноморец</h3>
-                <p>Курортный проспект, 39. Коблево, Николаевская область</p>
-                <a href="mailto:info@chornomo.rest">
-                    <svg width="20" height="14" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M19.176 1.99562e-07H0.823986C0.368906 1.99562e-07 0 0.372791 0 0.832663V12.1673C0 12.6272 0.368906 13 0.823986 13H19.176C19.6311 13 20 12.6272 20 12.1673V0.832663C20 0.372791 19.6311 1.99562e-07 19.176 1.99562e-07ZM0.823986 0.653924H19.176C19.2535 0.654305 19.3216 0.705529 19.3443 0.780349L10 6.67874L0.655738 0.780349C0.678387 0.705529 0.746549 0.654305 0.823986 0.653924ZM0.64711 1.52582L7.36842 5.76761L0.64711 11.1559V1.52582ZM19.3529 12.163C19.3529 12.2617 19.2737 12.3417 19.176 12.3417H0.823986C0.726327 12.3417 0.64711 12.2617 0.64711 12.163V11.9886L7.95082 6.1556L9.82744 7.34138C9.93286 7.40857 10.0671 7.40857 10.1726 7.34138L12.0492 6.1556L19.3529 11.9886V12.163ZM19.3529 11.1559L12.6143 5.78504L19.3529 1.56506V11.1559Z"
-                              transform="translate(0 0.148926)" fill="white"/>
-                    </svg>
-                    <span>info@chornomo.rest</span>
-                </a>
+                <p>Курортный проспект, 39. <br />Коблево, Николаевская область</p>
             </div>
             <!--./footer--location-->
 
             <!--footer--phones-->
             <div class="footer--phones footer__section">
                 <a href="tel:+380930001272" class="address__link">+38 093 000 12 72</a>
-                <a href="tel:+380976394196" class="address__link">+38 097 639 41 96</a>
-                <a href="tel:+380505556421" class="address__link">+38 050 555 64 21</a>
+                <a href="tel:+380982772329" class="address__link">+38 098 277 23 29</a>
+                <a href="tel:+380504933204" class="address__link">+38 050 493 32 04</a>
             </div>
             <!--./footer--phones-->
 
             <!--footer--registr-->
             <div class="footer--registr footer__section">
-                <h3>Домик / коттеджи у моря</h3>
-                <a href="tel:+380632136164" class="address__link">+38 063 213 61 64</a>
-                <a href="tel:+380633204047" class="address__link">+38 063 320 40 47</a>
+                <a href="tel:+375444581647" class="address__link">+375 44 458 16 47</a>
+                <a href="mailto:info@chornomo.rest" class="address__link">
+                    <svg width="20" height="14" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M19.176 1.99562e-07H0.823986C0.368906 1.99562e-07 0 0.372791 0 0.832663V12.1673C0 12.6272 0.368906 13 0.823986 13H19.176C19.6311 13 20 12.6272 20 12.1673V0.832663C20 0.372791 19.6311 1.99562e-07 19.176 1.99562e-07ZM0.823986 0.653924H19.176C19.2535 0.654305 19.3216 0.705529 19.3443 0.780349L10 6.67874L0.655738 0.780349C0.678387 0.705529 0.746549 0.654305 0.823986 0.653924ZM0.64711 1.52582L7.36842 5.76761L0.64711 11.1559V1.52582ZM19.3529 12.163C19.3529 12.2617 19.2737 12.3417 19.176 12.3417H0.823986C0.726327 12.3417 0.64711 12.2617 0.64711 12.163V11.9886L7.95082 6.1556L9.82744 7.34138C9.93286 7.40857 10.0671 7.40857 10.1726 7.34138L12.0492 6.1556L19.3529 11.9886V12.163ZM19.3529 11.1559L12.6143 5.78504L19.3529 1.56506V11.1559Z"
+                              transform="translate(0 0.148926)" fill="white"/>
+                    </svg> Info@chornomo.rest
+                </a>
             </div>
             <!--./footer--registr-->
 
@@ -614,6 +574,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script src="js/owl.carousel.min.js"></script>
 <script src="js/bundle.js"></script>
 
 </body>
