--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
 <!--gallery-->
 <div class="hero__gallery">
     <div class="owl-carousel owl-theme">
-        <div class="item"><img src="img/gallery1.jpg" alt="img1" /></div>
-        <div class="item"><img src="img/gallery2.jpg" alt="img2" /></div>
-        <div class="item"><img src="img/gallery3.jpg" alt="img3" /></div>
-        <div class="item"><img src="img/gallery4.jpg" alt="img4" /></div>
-        <div class="item"><img src="img/gallery5.jpg" alt="img5" /></div>
-        <div class="item"><img src="img/gallery6.jpg" alt="img6" /></div>
-        <div class="item"><img src="img/gallery7.jpg" alt="img7" /></div>
+        <div class="item"><img src="img/gallery1.jpg" alt="img1"/></div>
+        <div class="item"><img src="img/gallery2.jpg" alt="img2"/></div>
+        <div class="item"><img src="img/gallery3.jpg" alt="img3"/></div>
+        <div class="item"><img src="img/gallery4.jpg" alt="img4"/></div>
+        <div class="item"><img src="img/gallery5.jpg" alt="img5"/></div>
+        <div class="item"><img src="img/gallery6.jpg" alt="img6"/></div>
+        <div class="item"><img src="img/gallery7.jpg" alt="img7"/></div>
     </div>
 </div>
 <!--./gallery-->
@@ -289,14 +289,14 @@
                         <tr>
                             <td>Душ, туалет, кондиционер</td>
                             <td>Душ, туалет в номере<br/><span class="table-tall">*</span>кондиционер в 10 номерах</td>
-                            <td>умывальник в номере, <br />
-                                туалет на этаже,<br />
+                            <td>умывальник в номере, <br/>
+                                туалет на этаже,<br/>
                                 душ возле корпуса
                             </td>
-                            <td>умывальник в номере,<br />
+                            <td>умывальник в номере,<br/>
                                 душ и туалет на территории
                             </td>
-                            <td>все удобства на<br />
+                            <td>все удобства на<br/>
                                 территории
                             </td>
                         </tr>
@@ -336,14 +336,14 @@
                         <tr>
                             <td>Душ, туалет, кондиционер</td>
                             <td>Душ, туалет в номере<br/><span class="table-tall">*</span>кондиционер в 10 номерах</td>
-                            <td>умывальник в номере, <br />
-                                туалет на этаже,<br />
+                            <td>умывальник в номере, <br/>
+                                туалет на этаже,<br/>
                                 душ возле корпуса
                             </td>
-                            <td>умывальник в номере,<br />
+                            <td>умывальник в номере,<br/>
                                 душ и туалет на территории
                             </td>
-                            <td>все удобства на<br />
+                            <td>все удобства на<br/>
                                 территории
                             </td>
                         </tr>
@@ -383,14 +383,14 @@
                         <tr>
                             <td>Душ, туалет, кондиционер</td>
                             <td>Душ, туалет в номере<br/><span class="table-tall">*</span>кондиционер в 10 номерах</td>
-                            <td>умывальник в номере, <br />
-                                туалет на этаже,<br />
+                            <td>умывальник в номере, <br/>
+                                туалет на этаже,<br/>
                                 душ возле корпуса
                             </td>
-                            <td>умывальник в номере,<br />
+                            <td>умывальник в номере,<br/>
                                 душ и туалет на территории
                             </td>
-                            <td>все удобства на<br />
+                            <td>все удобства на<br/>
                                 территории
                             </td>
                         </tr>
@@ -430,14 +430,14 @@
                         <tr>
                             <td>Душ, туалет, кондиционер</td>
                             <td>Душ, туалет в номере<br/><span class="table-tall">*</span>кондиционер в 10 номерах</td>
-                            <td>умывальник в номере, <br />
-                                туалет на этаже,<br />
+                            <td>умывальник в номере, <br/>
+                                туалет на этаже,<br/>
                                 душ возле корпуса
                             </td>
-                            <td>умывальник в номере,<br />
+                            <td>умывальник в номере,<br/>
                                 душ и туалет на территории
                             </td>
-                            <td>все удобства на<br />
+                            <td>все удобства на<br/>
                                 территории
                             </td>
                         </tr>
@@ -466,7 +466,8 @@
             <li>Душ 15 грн / сутки</li>
             <li>Пользование собственными электроприборамив домике - 37,50 грн / сутки</li>
         </ol>
-        <p><strong>Цены в течении сезона могут изменяться</strong> ( справки  по тел. <strong>+38 093 000 12 72</strong> )</p>
+        <p><strong>Цены в течении сезона могут изменяться</strong> ( справки по тел. <strong>+38 093 000 12 72</strong>
+            )</p>
         <h4>Предлагаем качественное 1, 2, 3-х разовое питание на территории пансионата.</h4>
 
 
@@ -474,13 +475,13 @@
 </section>
 <!--./price-->
 <section id="location" class="location container">
-    <ul class="wedo__list container">
-        <li class="wedo__item main__map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2739.961315561318!2d31.187227115818978!3d46.62752636308637!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40c66b1e12f43745%3A0x2859b41d8041c8ef!2z0L_RgNC-0YHQv9C10LrRgiDQmtGD0YDQvtGA0YLQvdC40LksIDM5LCDQmtC-0LHQu9C10LLQtSwg0JzQuNC60L7Qu9Cw0ZfQstGB0YzQutCwINC-0LHQu9Cw0YHRgtGMLCDQo9C60YDQsNGX0L3QsCwgNTc0NTM!5e0!3m2!1suk!2s!4v1531835505604"
-                    width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-        </li>
 
-        <li class="wedo__item">
+    <div class="wedo__list container">
+        <div class="wedo__item main__map">
+            <div id="map_wrappper" class="map"></div>
+        </div>
+
+        <div class="wedo__item">
                 <span class="wedo__item--descr--about" align="justify">
                     <h2 class="wedo__item--descr--title">Как добраться?</h2>
                     <p>Из г.Николаев существует регулярное автобусное сообщение  "Николаевский Автовокзал – Автовокзал Коблево". РЕКОМЕНДУЕМ воспользоваться маршрутными такси "Николаевский Автовокзал – Автовокзал Коблево - Базы", доставляющими  отдыхающих прямо на остановку “Пансионат «ЧЕРНОМОРЕЦ”. 
@@ -492,8 +493,8 @@
                     Туристам с личным транспортом необходимо доезжать до г. Одесса или г. Николаев, от этих городов выехать на трассу М-14, на которой находится пгт. Коблево. Въехав в Коблево - свернуть  в курортную зону.
                     </p>
                 </span>
-        </li>
-    </ul>
+        </div>
+    </div>
 </section>
 
 <!--footer-->
@@ -507,7 +508,7 @@
             <!--footer--location-->
             <div class="footer--location footer__section">
                 <h3>База отдыха Черноморец</h3>
-                <p>Курортный проспект, 39. <br />Коблево, Николаевская область</p>
+                <p>Курортный проспект, 39. <br/>Коблево, Николаевская область</p>
             </div>
             <!--./footer--location-->
 
@@ -526,7 +527,8 @@
                     <svg width="20" height="14" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M19.176 1.99562e-07H0.823986C0.368906 1.99562e-07 0 0.372791 0 0.832663V12.1673C0 12.6272 0.368906 13 0.823986 13H19.176C19.6311 13 20 12.6272 20 12.1673V0.832663C20 0.372791 19.6311 1.99562e-07 19.176 1.99562e-07ZM0.823986 0.653924H19.176C19.2535 0.654305 19.3216 0.705529 19.3443 0.780349L10 6.67874L0.655738 0.780349C0.678387 0.705529 0.746549 0.654305 0.823986 0.653924ZM0.64711 1.52582L7.36842 5.76761L0.64711 11.1559V1.52582ZM19.3529 12.163C19.3529 12.2617 19.2737 12.3417 19.176 12.3417H0.823986C0.726327 12.3417 0.64711 12.2617 0.64711 12.163V11.9886L7.95082 6.1556L9.82744 7.34138C9.93286 7.40857 10.0671 7.40857 10.1726 7.34138L12.0492 6.1556L19.3529 11.9886V12.163ZM19.3529 11.1559L12.6143 5.78504L19.3529 1.56506V11.1559Z"
                               transform="translate(0 0.148926)" fill="white"/>
-                    </svg> Info@chornomo.rest
+                    </svg>
+                    Info@chornomo.rest
                 </a>
             </div>
             <!--./footer--registr-->
@@ -574,6 +576,8 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCC214ufXZB39fjSQckFsln2rlGv2V5QMo"></script>
+<script src="js/map.js"></script>
 <script src="js/owl.carousel.min.js"></script>
 <script src="js/bundle.js"></script>
 
