--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>База отдыха Черноморец</title>
     <link rel="stylesheet" href="styles/main.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.css">
     <link rel="shortcut icon" href="img/favicon.jpg" type="image/x-icon">
 </head>
 
@@ -111,7 +112,7 @@
 
 <!--gallery-->
 <div class="hero__gallery">
-    <div class="owl-carousel owl-theme">
+    <div class="owl-carousel owl-carousel-main owl-theme">
         <div class="item"><img src="img/gallery1.jpg" alt="img1"/></div>
         <div class="item"><img src="img/gallery2.jpg" alt="img2"/></div>
         <div class="item"><img src="img/gallery3.jpg" alt="img3"/></div>
@@ -140,11 +141,88 @@
     <!--./wedo__list-->
     <!--workshop-->
     <div class="workshop container" id="workshop">
+<!--        <div class="section__title">-->
+<!--            <h2 class="section__title&#45;&#45;text-main">На базе отдыха проходят различные мероприятия, семинары</h2>-->
+<!--        </div>-->
+<!--        <div class="section__img">-->
+<!--            <img src="img/workshopYoga.jpg" alt="Йога семинар 2019">-->
+<!--        </div>-->
         <div class="section__title">
-            <h2 class="section__title--text-main">На базе отдыха проходят различные мероприятия, семинары</h2>
+            <h2 class="section__title--text-main">Фотографии с йога семинара Ларисы&nbsp;Жук</h2>
         </div>
-        <div class="section__img">
-            <img src="img/workshopYoga.jpg" alt="Йога семинар 2019">
+        <div class="section__slider">
+            <div class="owl-carousel owl-carousel-yoga owl-theme">
+                <div class="item">
+                    <a href="img/workshop_yoga/yoga_img1.jpg" data-fancybox data-caption="">
+                        <img src="img/workshop_yoga/yoga_img1.jpg" alt="img1"/>
+                    </a>
+                </div>
+                <div class="item">
+                    <a href="img/workshop_yoga/yoga_img2.jpg" data-fancybox data-caption="">
+                        <img src="img/workshop_yoga/yoga_img2.jpg" alt="img2"/>
+                    </a>
+                </div>
+                <div class="item">
+                    <a href="img/workshop_yoga/yoga_img3.jpg" data-fancybox data-caption="">
+                        <img src="img/workshop_yoga/yoga_img3.jpg" alt="img3"/>
+                    </a>
+                </div>
+                <div class="item">
+                    <a href="img/workshop_yoga/yoga_img4.jpg" data-fancybox data-caption="">
+                        <img src="img/workshop_yoga/yoga_img4.jpg" alt="img4"/>
+                    </a>
+                </div>
+                <div class="item">
+                    <a href="img/workshop_yoga/yoga_img5.jpg" data-fancybox data-caption="">
+                        <img src="img/workshop_yoga/yoga_img5.jpg" alt="img5"/>
+                    </a>
+                </div>
+                <div class="item">
+                    <a href="img/workshop_yoga/yoga_img6.jpg" data-fancybox data-caption="">
+                        <img src="img/workshop_yoga/yoga_img6.jpg" alt="img6"/>
+                    </a>
+                </div>
+                <div class="item">
+                    <a href="img/workshop_yoga/yoga_img7.jpg" data-fancybox data-caption="">
+                        <img src="img/workshop_yoga/yoga_img7.jpg" alt="img7"/>
+                    </a>
+                </div>
+                <div class="item">
+                    <a href="img/workshop_yoga/yoga_img8.jpg" data-fancybox data-caption="">
+                        <img src="img/workshop_yoga/yoga_img8.jpg" alt="img8"/>
+                    </a>
+                </div>
+                <div class="item">
+                    <a href="img/workshop_yoga/yoga_img9.jpg" data-fancybox data-caption="">
+                        <img src="img/workshop_yoga/yoga_img9.jpg" alt="img9"/>
+                    </a>
+                </div>
+                <div class="item">
+                    <a href="img/workshop_yoga/yoga_img10.jpg" data-fancybox data-caption="">
+                        <img src="img/workshop_yoga/yoga_img10.jpg" alt="img10"/>
+                    </a>
+                </div>
+                <div class="item">
+                    <a href="img/workshop_yoga/yoga_img11.jpg" data-fancybox data-caption="">
+                        <img src="img/workshop_yoga/yoga_img11.jpg" alt="img11"/>
+                    </a>
+                </div>
+                <div class="item">
+                    <a href="img/workshop_yoga/yoga_img12.jpg" data-fancybox data-caption="">
+                        <img src="img/workshop_yoga/yoga_img12.jpg" alt="img12"/>
+                    </a>
+                </div>
+                <div class="item">
+                    <a href="img/workshop_yoga/yoga_img13.jpg" data-fancybox data-caption="">
+                        <img src="img/workshop_yoga/yoga_img13.jpg" alt="img13"/>
+                    </a>
+                </div>
+                <div class="item">
+                    <a href="img/workshop_yoga/yoga_img14.jpg" data-fancybox data-caption="">
+                        <img src="img/workshop_yoga/yoga_img14.jpg" alt="img14"/>
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
     <!--./workshop-->
@@ -577,6 +655,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCC214ufXZB39fjSQckFsln2rlGv2V5QMo"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
 <script src="js/map.js"></script>
 <script src="js/owl.carousel.min.js"></script>
 <script src="js/bundle.js"></script>
