--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         <article class="rooms__item">
             <div class="rooms__item--img--wrap">
                 <div class="rooms__item--img">
-                    <img src="img/build1.jpeg" alt="Корпус №2">
+                    <img src="img/build1.jpg" alt="Корпус №2">
                     <img src="img/build11.jpeg" alt="Корпус №2">
                 </div>
             </div>
@@ -262,7 +262,7 @@
             </div>
             <div class="rooms__item--img--wrap">
                 <div class="rooms__item--img">
-                    <img src="img/build2.jpeg" alt="Корпус №1">
+                    <img src="img/build2.jpg" alt="Корпус №1">
                     <img src="img/build22.jpeg" alt="Корпус №1">
                 </div>
 
@@ -305,8 +305,8 @@
     <!--views-->
     <div class="views--wrap container">
         <div class="views__item--img">
-            <img src="img/location1.jpeg" alt="Территория базы">
-            <img src="img/location2.jpeg" alt="Территория базы">
+            <img src="img/location1.jpg" alt="Территория базы">
+            <img src="img/location2.jpg" alt="Территория базы">
             <img src="img/location3.jpeg" alt="Территория базы">
         </div>
     </div>
@@ -576,10 +576,7 @@
 </section>
 
 <!--footer-->
-<footer class="footer" style="background: url('img/footer.jpeg');
-            background-repeat: no-repeat;
-            background-position: center center;
-            background-size: cover;">
+<footer class="footer">
     <h2 class="footer__title container">Мы вас ждем!!!</h2>
     <div class="footer__content">
         <address class="container footer__wrap">
