--- a/index.html
+++ b/index.html
@@ -153,52 +153,52 @@
         <div class="section__slider">
             <div class="owl-carousel owl-carousel-yoga owl-theme">
                 <div class="item">
-                    <a href="img/workshop_yoga/yoga_img1.jpg" data-fancybox data-caption="">
+                    <a href="img/workshop_yoga/yoga_img1.jpg" data-fancybox="workshop-yoga" data-caption="">
                         <img src="img/workshop_yoga/yoga_img1.jpg" alt="img1"/>
                     </a>
                 </div>
                 <div class="item">
-                    <a href="img/workshop_yoga/yoga_img2.jpg" data-fancybox data-caption="">
+                    <a href="img/workshop_yoga/yoga_img2.jpg" ddata-fancybox="workshop-yoga" data-caption="">
                         <img src="img/workshop_yoga/yoga_img2.jpg" alt="img2"/>
                     </a>
                 </div>
                 <div class="item">
-                    <a href="img/workshop_yoga/yoga_img3.jpg" data-fancybox data-caption="">
+                    <a href="img/workshop_yoga/yoga_img3.jpg" data-fancybox="workshop-yoga" data-caption="">
                         <img src="img/workshop_yoga/yoga_img3.jpg" alt="img3"/>
                     </a>
                 </div>
                 <div class="item">
-                    <a href="img/workshop_yoga/yoga_img4.jpg" data-fancybox data-caption="">
+                    <a href="img/workshop_yoga/yoga_img4.jpg" data-fancybox="workshop-yoga" data-caption="">
                         <img src="img/workshop_yoga/yoga_img4.jpg" alt="img4"/>
                     </a>
                 </div>
                 <div class="item">
-                    <a href="img/workshop_yoga/yoga_img5.jpg" data-fancybox data-caption="">
+                    <a href="img/workshop_yoga/yoga_img5.jpg" data-fancybox="workshop-yoga" data-caption="">
                         <img src="img/workshop_yoga/yoga_img5.jpg" alt="img5"/>
                     </a>
                 </div>
                 <div class="item">
-                    <a href="img/workshop_yoga/yoga_img6.jpg" data-fancybox data-caption="">
+                    <a href="img/workshop_yoga/yoga_img6.jpg" data-fancybox="workshop-yoga" data-caption="">
                         <img src="img/workshop_yoga/yoga_img6.jpg" alt="img6"/>
                     </a>
                 </div>
                 <div class="item">
-                    <a href="img/workshop_yoga/yoga_img7.jpg" data-fancybox data-caption="">
+                    <a href="img/workshop_yoga/yoga_img7.jpg" data-fancybox="workshop-yoga" data-caption="">
                         <img src="img/workshop_yoga/yoga_img7.jpg" alt="img7"/>
                     </a>
                 </div>
                 <div class="item">
-                    <a href="img/workshop_yoga/yoga_img8.jpg" data-fancybox data-caption="">
+                    <a href="img/workshop_yoga/yoga_img8.jpg" data-fancybox="workshop-yoga" data-caption="">
                         <img src="img/workshop_yoga/yoga_img8.jpg" alt="img8"/>
                     </a>
                 </div>
                 <div class="item">
-                    <a href="img/workshop_yoga/yoga_img9.jpg" data-fancybox data-caption="">
+                    <a href="img/workshop_yoga/yoga_img9.jpg" data-fancybox="workshop-yoga" data-caption="">
                         <img src="img/workshop_yoga/yoga_img9.jpg" alt="img9"/>
                     </a>
                 </div>
                 <div class="item">
-                    <a href="img/workshop_yoga/yoga_img10.jpg" data-fancybox data-caption="">
+                    <a href="img/workshop_yoga/yoga_img10.jpg" data-fancybox="workshop-yoga" data-caption="">
                         <img src="img/workshop_yoga/yoga_img10.jpg" alt="img10"/>
                     </a>
                 </div>
@@ -208,17 +208,17 @@
                     </a>
                 </div>
                 <div class="item">
-                    <a href="img/workshop_yoga/yoga_img12.jpg" data-fancybox data-caption="">
+                    <a href="img/workshop_yoga/yoga_img12.jpg" data-fancybox="workshop-yoga" data-caption="">
                         <img src="img/workshop_yoga/yoga_img12.jpg" alt="img12"/>
                     </a>
                 </div>
                 <div class="item">
-                    <a href="img/workshop_yoga/yoga_img13.jpg" data-fancybox data-caption="">
+                    <a href="img/workshop_yoga/yoga_img13.jpg" data-fancybox="workshop-yoga" data-caption="">
                         <img src="img/workshop_yoga/yoga_img13.jpg" alt="img13"/>
                     </a>
                 </div>
                 <div class="item">
-                    <a href="img/workshop_yoga/yoga_img14.jpg" data-fancybox data-caption="">
+                    <a href="img/workshop_yoga/yoga_img14.jpg" data-fancybox="workshop-yoga" data-caption="">
                         <img src="img/workshop_yoga/yoga_img14.jpg" alt="img14"/>
                     </a>
                 </div>
