--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     </a>
                 </div>
                 <div class="item">
-                    <a href="img/workshop_yoga/yoga_img2.jpg" ddata-fancybox="workshop-yoga" data-caption="">
+                    <a href="img/workshop_yoga/yoga_img2.jpg" data-fancybox="workshop-yoga" data-caption="">
                         <img src="img/workshop_yoga/yoga_img2.jpg" alt="img2"/>
                     </a>
                 </div>
@@ -203,7 +203,7 @@
                     </a>
                 </div>
                 <div class="item">
-                    <a href="img/workshop_yoga/yoga_img11.jpg" data-fancybox data-caption="">
+                    <a href="img/workshop_yoga/yoga_img11.jpg" data-fancybox="workshop-yoga" data-caption="">
                         <img src="img/workshop_yoga/yoga_img11.jpg" alt="img11"/>
                     </a>
                 </div>
